projects/compiler/test/typechecker/import/error_duplicate_type_name.2.out
Error at %FILE_NAME%:3:6
Duplicate name 'Foo'
  |  func Foo() {}
          ^
This name is also declared at (1:8)
  |  import Foo from "./_exports"
            ^
